@@ -3,12 +3,13 @@ import static java.lang.Boolean.parseBoolean
 buildscript {
     repositories {
         mavenCentral()
-        maven {url 'https://plugins.gradle.org/m2/'}
+        gradlePluginPortal()
         maven {url 'https://repo.grails.org/grails/core'}
     }
     dependencies {
         classpath "org.grails:grails-gradle-plugin:$grailsGradlePluginVersion"
         classpath "org.grails.plugins:hibernate5:$grailsHibernatePluginVersion"
+        classpath "co.uzzu.dotenv:gradle:$dotEnvGradlePluginVersion"
     }
 }
 
@@ -18,6 +19,12 @@ group xhAppPackage
 apply plugin:'idea'
 apply plugin:'war'
 apply plugin:'org.grails.grails-web'
+
+// Must be applied to root project - matters when running Toolbox in a wrapper project mode w/hoist-core.
+// See README.md for more details on this configuration, including contents of top-level build.gradle file.
+gradle.rootProject {
+    apply plugin:'co.uzzu.dotenv.gradle'
+}
 
 repositories {
     mavenCentral()
@@ -49,10 +56,16 @@ if (parseBoolean(runHoistInline)) {
 }
 
 dependencies {
-    implementation "org.bitbucket.b_c:jose4j:0.7.12"
-    runtimeOnly "mysql:mysql-connector-java:8.0.33"
-    developmentOnly "io.methvin:directory-watcher:0.15.0"
+    // For server-side JWT validation.
+    implementation "org.bitbucket.b_c:jose4j:0.9.6"
 
+    // Database drivers - H2 for temporary in-memory DB with `useH2: true` in instanceConfig YAML
+    // MySQL for deployed instances, or more stateful local workstation setups.
+    runtimeOnly "com.h2database:h2:2.2.224"
+    runtimeOnly "mysql:mysql-connector-java:8.0.33"
+
+    // For hot reloading
+    developmentOnly "io.methvin:directory-watcher:0.15.0"
     if (parseBoolean(enableHotSwap)) {
         developmentOnly "io.xh:groovyReset:1.0"
     }
@@ -73,8 +86,17 @@ Map hoistMetaData = [
 def allJvmArgs = [
     '-Dspring.output.ansi.enabled=always',
     '-XX:TieredStopAtLevel=1',
-    '-Xmx1024m'
+    '-Xmx1024m',
+    "--add-modules=java.se",
+    "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
+    "--add-opens=java.base/java.lang=ALL-UNNAMED",
+    "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+    "--add-opens=java.management/sun.management=ALL-UNNAMED",
+    "--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED",
+    "--add-opens=java.base/java.util=ALL-UNNAMED"
 ]
+
+
 
 if (parseBoolean(enableHotSwap)) {
     def groovyReset = configurations.developmentOnly.resolve().find {it.name.contains("groovyReset")}
@@ -91,6 +113,8 @@ bootRun {
     jvmArgs(allJvmArgs)
     sourceResources sourceSets.main
     systemProperties hoistMetaData
+    // Bring .env sourced environment variables into bootRun JVM process.
+    environment env.allVariables()
 }
 
 tasks.withType(GroovyCompile) {
@@ -111,12 +135,18 @@ idea {
 //--------------------------------------------------
 // Extensions to build.info (Hoist-Core requirement)
 //--------------------------------------------------
-buildProperties.doLast {
-    File grailsBuildInfoFile = it.outputs.files.files.find { it.name == 'grails.build.info' }
-    if (!grailsBuildInfoFile) return
-
+tasks.war.doFirst {
+    File infoFile = layout.buildDirectory.file('resources/main/META-INF/grails.build.info').get().asFile
     Properties properties = new Properties()
-    grailsBuildInfoFile.withInputStream {properties.load(it)}
+    infoFile.withInputStream {properties.load(it)}
     properties.putAll(hoistMetaData)
-    grailsBuildInfoFile.withOutputStream {properties.store(it, null)}
+    infoFile.withOutputStream {properties.store(it, null)}
+}
+
+// Ensure that all variables defined in .env.template are set in local .env
+tasks.bootRun.doFirst {
+    def missingEnvVars = env.allVariablesOrNull().findAll {it.value == null}.collect {it.key}
+    if (missingEnvVars) {
+        throw new GradleException("Environment variables listed in .env.template not set in local .env file as required: ${missingEnvVars}")
+    }
 }
